2007-03-31  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/source.py:
	Set initial values for TimelineSource media_start and media_duration
	* tests/common.py:
	New TimelineFileSource and FileSourceFactory test objects
	* tests/test_timeline_source.py:
	Test some behaviour of TimelineFileSource
	Fixes #424228

2007-03-28  Edward Hervey  <edward@fluendo.com>

	* pitivi/timeline/objects.py:
	Add a getBrother() method to BrotherObjects.
	small cleanups
	* tests/Makefile.am:
	* tests/common.py:
	New file to contain the test pitivi objects
	* tests/test_timeline_objects.py:
	Unit test for the pitivi.timeline.objects file.
	Only contains tests for the BrotherObjects, still need to add tests
	for the TimelineObjects.

2007-03-27  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	Separate the gtk mainloop handling outside of the Pitivi class.
	This allows not forcing the use of a gobject MainLoop when using
	PiTiVi.
	* Makefile.am:
	* configure.ac:
	* tests/:
	* tests/Makefile.am:
	* tests/runtests.py:
	* tests/test_basic.py:
	Added unit-test system. First provided test tests that pitivi gets
	properly created and destroyed, nothing fancy.
	This should lead the way to a whole bunch of unit-tests. Ideally we
	should have one unit test per relevant code file.

2007-03-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	Add an option for ui-less pitivi. Needed for unit-testing.
	* pitivi/timeline/source.py:
	Remove cruft.

2007-03-25  Edward Hervey  <edward@fluendo.com>

	* pitivi/ui/sourcefactories.py:
	The order of the dialogbox buttons should be [close, add].

2007-03-25  Edward Hervey  <edward@fluendo.com>

	Patch by: Johan Dahlin <jdahlin@async.com.br>

	* pitivi/ui/sourcefactories.py:
	HIG fixes.
	Switch the explanation message from a gtk.TextView to a gtk.Label,
	in order to avoid issues with text selections.

2007-03-18  Edward Hervey  <edward@fluendo.com>

	* pitivi/pitivi.py:
	* pitivi/pitivigstutils.py: