@@ -1,3 +1,8 @@
+2007-04-04  Edward Hervey  <edward@fluendo.com>
+
+	* tests/common.py:
+	Some systems/python don't like doing in-depth import.
+
 2007-03-31  Edward Hervey  <edward@fluendo.com>
 
 	* pitivi/timeline/source.py:
